--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
   },
   "dependencies": {
     "date-utils": "^1.2.16",
+    "githubot": "^1.0.0-beta2",
+    "gitio2": "^2.0.0",
     "hubot": ">= 2.6.0 < 3.0.0",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
     "hubot-slack": "^2.2.0",
-    "hubot-thecat": "^1.0.1"
+    "hubot-thecat": "^1.0.1",
+    "underscore": "^1.7.0",
+    "underscore.string": "^2.3.3"
   },
   "engines": {
     "node": ">= 0.8.x",
